add international currency
