# src/main/kotlin/com/wutsi/site/endpoint/GetController.kt
@@ -6,6 +6,7 @@ import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.RestController
+import javax.validation.constraints.NotNull
 import kotlin.Long
 
 @RestController
@@ -13,6 +14,7 @@ public class GetController(
     private val `delegate`: GetDelegate
 ) {
     @GetMapping("/v1/sites/{id}")
-    @PreAuthorize(value = "hasAuthority('site')")
-    public fun invoke(@PathVariable(name = "id") id: Long): GetSiteResponse = delegate.invoke(id)
+    @PreAuthorize(value = "hasAuthority('site-read')")
+    public fun invoke(@PathVariable(name = "id") @NotNull id: Long): GetSiteResponse =
+        delegate.invoke(id)
 }
