# src/main/kotlin/com/wutsi/site/endpoint/UpdateController.kt
@@ -9,6 +9,7 @@ import org.springframework.web.bind.`annotation`.PostMapping
 import org.springframework.web.bind.`annotation`.RequestBody
 import org.springframework.web.bind.`annotation`.RestController
 import javax.validation.Valid
+import javax.validation.constraints.NotNull
 import kotlin.Long
 
 @RestController
@@ -16,9 +17,9 @@ public class UpdateController(
     private val `delegate`: UpdateDelegate
 ) {
     @PostMapping("/v1/sites/{id}")
-    @PreAuthorize(value = "hasAuthority('site.admin')")
+    @PreAuthorize(value = "hasAuthority('site-manage')")
     public fun invoke(
-        @PathVariable(name = "id") id: Long,
+        @PathVariable(name = "id") @NotNull id: Long,
         @Valid @RequestBody
         request: UpdateSiteRequest
     ): UpdateSiteResponse = delegate.invoke(id, request)
