# src/main/kotlin/com/wutsi/site/entity/SiteEntity.kt
@@ -1,6 +1,5 @@
 package com.wutsi.site.entity
 
-import javax.persistence.Column
 import javax.persistence.Entity
 import javax.persistence.GeneratedValue
 import javax.persistence.GenerationType
@@ -16,15 +15,11 @@ data class SiteEntity(
     val id: Long? = null,
 
     var name: String = "",
-
-    @Column(name = "display_name")
     var displayName: String = "",
-
-    @Column(name = "domain_name")
     var domainName: String = "",
-
     var language: String = "",
     var currency: String = "",
+    var internationalCurrency: String = "",
 
     @OneToMany(mappedBy = "site")
     val attributes: List<AttributeEntity> = emptyList()
